kubernetes/apps/media/bazarr4k/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bazarr4k-480p-com
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media
    gethomepage.dev/name: Bazarr
    gethomepage.dev/pod-selector: app.kubernetes.io/name=bazarr4k
    gethomepage.dev/icon: bazarr4k.png
    gatus.home-operations.com/endpoint: |-
      url: https://bazarr4k.480p.com/health
spec:
  hostnames:
    - bazarr4k.480p.com
  parentRefs:
    - name: envoy-480p-com-public
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: bazarr4k
          port: 6767
